Create webhooks for several boards in a separate script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "dev-setup": "ts-node src/dev.setup.ts"
   },
   "keywords": [],
   "author": "",
