--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "@types/node": "^14.14.10",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
     "got": "^11.8.0"
