--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/index.ts",
     "dev-setup": "ts-node src/dev.setup.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/async": "^3.2.4",
     "@types/express": "^4.17.9",
     "ngrok": "^3.3.0",
+    "nodemon": "^2.0.6",
     "prettier": "^2.2.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
     "@types/node": "^14.14.10",
+    "async": "^3.2.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
     "got": "^11.8.0"
