--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "async": "^3.2.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
-    "got": "^11.8.0"
+    "got": "^11.8.0",
+    "winston": "^3.3.3"
   }
 }
